--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body{
+        @apply font-bold;
+    }
+}
+
+@layer components{
+    .icons{
+        @apply h-5 w-5 cursor-pointer;
+    }
+}
